--- a/src/app/components/shop/shop.component.html
+++ b/src/app/components/shop/shop.component.html
@@ -1,3 +1,8 @@
 <app-navbar></app-navbar>
   <router-outlet></router-outlet>
 <app-footer></app-footer>
+
+
+<div *ngFor="let lista of listaProducts">
+  <p>${{ lista.price }}</p>
+</div>
