--- a/src/app/components/main-page/card-secondary/card-secondary.component.html
+++ b/src/app/components/main-page/card-secondary/card-secondary.component.html
@@ -11,13 +11,13 @@
     </button>
     <div class="w-full h-full mx-auto overflow-x-hidden overflow-y-hidden">
       <div id="slider" class="h-full flex lg:gap-8 md:gap-6 gap-14 items-center justify-start transition ease-out duration-700">
-        <div *ngFor="let merch of merchList" class="flex flex-shrink-0 relative w-full sm:w-auto card-image">
+        <div *ngFor="let merch of merchList" (click)="detailMerch(merch.id)" class="flex flex-shrink-0 relative w-full sm:w-auto card-image">
           <img [src]="merch.image" alt="black chair and white table" class="object-cover object-center w-full" style="height: 30rem;" />
           <div class="bg-gray-800 bg-opacity-30 absolute w-full h-full p-6">
             <h2 class="lg:text-xl leading-4 text-base lg:leading-5 text-black">{{ merch.category }}</h2>
             <h3 class="text-xl lg:text-2xl font-semibold leading-5 lg:leading-6 text-black">{{ merch.title }}</h3>
             <div class="absolute bottom-0 pb-6">
-              <button class="hover-button">
+              <button class="hover-button" (click)="addCart(merch); $event.stopPropagation()">
                 <span class="text-white-500 font-bold underline">COMPRAR AHORA</span>
               </button>
             </div>
