--- a/src/app/components/shared/navbar/navbar.component.html
+++ b/src/app/components/shared/navbar/navbar.component.html
@@ -76,7 +76,7 @@
         <li class="pb-3"><a href="" class="text-sm text-gray-700 hover:text-blue-400 dark:text-gray-100">Home</a></li>
         <li class="pb-3"><a href="" class="text-sm text-gray-700 hover:text-blue-400 dark:text-gray-400">About us</a></li>
         <li class="pb-3"><a href="" class="text-sm text-gray-700 hover:text-blue-400 dark:text-gray-400">Features</a></li>
-        <li class="pb-3"><a href="" class="text-sm text-gray-700 hover:text-blue-400 dark:text-gray-400">Blog</a></li>
+        <li class="pb-3"><a href="" class="text-sm text-gray-700 hover:text-blue-400 dark:text-gray-400" routerLink="/shop">OUTLET </a></li>
       </ul>
       <div class="block mt-5 lg:hidden">
         <a href="" class="inline-block w-full px-4 py-3 mb-4 mr-2 text-xs font-semibold leading-none text-center text-blue-600 border border-blue-400 rounded dark:hover:text-blue-300 dark:text-gray-400 dark:border-gray-400 hover:text-blue-700 hover:border-blue-300">Log In</a>
